RESOLVED FIXED83150
WebSpeechRecognizer.h: add missing forward declaration
https://bugs.webkit.org/show_bug.cgi?id=83150
Summary WebSpeechRecognizer.h: add missing forward declaration
Hans Wennborg
Reported 2012-04-04 05:30:25 PDT
WebSpeechRecognizer.h: add missing forward declaration
Attachments
Patch (1.26 KB, patch)
2012-04-04 05:30 PDT, Hans Wennborg
tonyg: review+
Hans Wennborg
Comment 1 2012-04-04 05:30:57 PDT
WebKit Review Bot
Comment 2 2012-04-04 05:32:33 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
Hans Wennborg
Comment 3 2012-04-04 05:34:33 PDT
Note You need to log in before you can comment on or make changes to this bug.