WebSpeechRecognizer.h: add missing forward declaration https://bugs.webkit.org/show_bug.cgi?id=83150

Reviewed by Tony Gentilcore.

Add missing forward declaration of WebSpeechRecognitionParams.

* public/WebSpeechRecognizer.h:
(WebKit):

Canonical link: https://commits.webkit.org/100518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113176 268f45cc-cd09-0410-ab3c-d52691b4dbfc